fix(styles): fix table scrollbar color in dark mode

--- a/src/Table/styles/index.less
+++ b/src/Table/styles/index.less
@@ -413,7 +413,7 @@
     width: @table-scrollbar-width;
     // Reserve scroll bar position.
     bottom: @table-scrollbar-width;
-    background-color: var(--rs-table-scrollbar-vertical-thumb);
+    background-color: var(--rs-table-scrollbar-vertical-track);
   }
 
   &-vertical &-handle {
