--- a/src/styles/color-modes/dark.less
+++ b/src/styles/color-modes/dark.less
@@ -244,7 +244,7 @@
   --rs-table-scrollbar-track: @B700;
   --rs-table-scrollbar-thumb: @B200;
   --rs-table-scrollbar-thumb-active: @B100;
-  --rs-table-scrollbar-vertical-thumb: @B200;
+  --rs-table-scrollbar-vertical-track: @B700;
 
   // Drawer
   --rs-drawer-shadow: 0 4px 4px rgba(0, 0, 0, 0.12), 0 0 10px rgba(0, 0, 0, 0.06);
