--- a/src/styles/color-modes/light.less
+++ b/src/styles/color-modes/light.less
@@ -251,7 +251,7 @@
   --rs-table-scrollbar-track: @B200;
   --rs-table-scrollbar-thumb: @B800;
   --rs-table-scrollbar-thumb-active: @B900;
-  --rs-table-scrollbar-vertical-thumb-active: fade(@B900, 40%);
+  --rs-table-scrollbar-vertical-track: fade(@B200, 40%);
 
   // Drawer
   --rs-drawer-shadow: 0 4px 4px rgba(0, 0, 0, 0.12), 0 0 10px rgba(0, 0, 0, 0.06);
